[gd_scene load_steps=5 format=3 uid="uid://bo2b1x0u1j1dg"]

[ext_resource type="Script" uid="uid://bd3c10auv3sc0" path="res://addons/rts_framework/features/vision/minimap.gd" id="1_6mcq1"]
[ext_resource type="PackedScene" uid="uid://clbjgy724q2si" path="res://addons/rts_framework/features/vision/dynamic_circle_2d.tscn" id="1_dqnbu"]

[sub_resource type="ViewportTexture" id="ViewportTexture_dqnbu"]
viewport_path = NodePath("CombinedViewport")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5oxvc"]
blend_mode = 3
light_mode = 1

[node name="Minimap" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1408.0
offset_bottom = -568.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_dqnbu")
script = ExtResource("1_6mcq1")

[node name="CombinedViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
gui_disable_input = true
render_target_update_mode = 3

[node name="ColorRect" type="ColorRect" parent="CombinedViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="FogOfWarTexture" type="TextureRect" parent="CombinedViewport"]
material = SubResource("CanvasItemMaterial_5oxvc")
offset_right = 40.0
offset_bottom = 40.0

[node name="EditorOnlyCircle" parent="CombinedViewport" instance=ExtResource("1_dqnbu")]
position = Vector2(50, 50)
color = Color(0, 0, 1, 1)
